@@ -6,3 +6,4 @@ target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
 target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
 target/rough/asdf
 target/surefire-reports/TEST-com.companyname.bank.AppTest.xml
+target/surefire-reports/com.companyname.bank.AppTest.txt
